# yoga

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.rst  RELEASE.rst  contributing.html  genindex.html  index.html  install.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: gh-pages.yml  python-ci.yml  python-packages.yml  standalone-builds.yml  winbuild.yml
_sources/: contributing.rst.txt  index.rst.txt  install.rst.txt
_sources/cli/: image.rst.txt  index.rst.txt  model.rst.txt
cli/: image.html  index.html  model.html
doc/: conf.py  contributing.rst  index.rst  install.rst
doc/cli/: image.rst  index.rst  model.rst
doc/python/: image.rst  index.rst  model.rst
linux-bin/: README-linux-dist.md  README.md  build.sh  requirements.txt  yoga-bin.py
python/: image.html  index.html  model.html
scripts/: generate_manifest_in.sh  lsexif.py  lspng.py  lsriff.py
test/: test_image.py  test_image_encoders_jpeg.py  test_image_encoders_png.py  test_image_encoders_webp.py  test_image_encoders_webp_lossless.py  test_image_helpers.py  test_image_options.py  test_model.py  test_model_helpers.py  test_model_options.py
test/models/: model.dae  model.fbx
winbuild/: README-windows-dist.md  README.md  builddist.bat  requirements.txt
yoga/: __init__.py  __main__.py  cli.py  options.py
yoga/image/: __init__.py  cli.py  encoders.py  helpers.py  options.py
yoga/model/: __init__.py  assimp.cpp  (+6 more)
(+4 files in other folders)
